changes to make the service now app work in prod and have separate config files for various env.

--- a/META-INF/src/main/resources/config.properties
+++ b/META-INF/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 ##### Quartz Scheduler Cron Properties #####
-blackhawk.serviceNow.cron=5 * * * * ?
+blackhawk.serviceNow.cron=0 1 13 * * ?
 
 
 ##### DAX DB Properties #####
@@ -19,7 +19,16 @@ blackhawk.serviceNow.cron=5 * * * * ?
 #------------------------------------------------#
 dax.database.driver=net.sourceforge.jtds.jdbc.Driver
 dax.database.url=jdbc:jtds:sqlserver://10.5.8.81:1433/AX2009_SP1_QA
-dax.database.user=test
-dax.database.password=test
+dax.database.user=test1
+dax.database.password=test1
 jdbc.validationQuery=select 1
-
+sn.user=rajme00
+sn.password=Blackhawk11
+sn.endpoint=bhndev.service-now.com/sys_user.do?SOAP
+audit.database.driver=net.sourceforge.jtds.jdbc.Driver
+audit.database.url=jdbc:jtds:sqlserver://10.5.8.81:1433/IntegrationLayer_Audit
+audit.database.user=test1
+audit.database.password=test1
+http.harness.host.address=0.0.0.0
+http.harness.port=8082
+http.harness.path=serviceNowSOAPGetRecords
